tests/spec/emit/snapshots/interop_propagate_slice_option_return.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:fmt"
  import "go:example.com/aws"
  
  fn run() -> Result<(), error> {
    let xs = aws.Make()?
    for x in xs {
      match x {
        Some(v) => fmt.Println(v),
        None => fmt.Println("none"),
      }
    }
    Ok(())
  }
  
  fn main() {
    let _ = run()
  }
---
package main

import (
	"example.com/aws"
	"fmt"
	lisette "github.com/ivov/lisette/prelude"
)

func run() error {
	ret, err := aws.Make()
	if err != nil {
		return err
	}
	wrapped := make([]lisette.Option[string], len(ret))
	for i, v := range ret {
		if v != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	xs := wrapped
	for _, x := range xs {
		if x.Tag == lisette.OptionSome {
			fmt.Println(x.SomeVal)
		} else {
			fmt.Println("none")
		}
	}
	return nil
}

func main() {
	run()
}
