tests/spec/emit/snapshots/interop_ref_slice_option_return_and_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/aws"
  
  fn main() {
    let xs = aws.Make()
    aws.Use(xs)
  }
---
package main

import (
	"example.com/aws"
	lisette "github.com/ivov/lisette/prelude"
)

func main() {
	src := aws.Make()
	src_1 := *src
	wrapped := make([]lisette.Option[string], len(src_1))
	for i, v := range src_1 {
		if v != nil {
			wrapped[i] = lisette.MakeOptionSome[string](*v)
		} else {
			wrapped[i] = lisette.MakeOptionNone[string]()
		}
	}
	xs := &wrapped
	src_2 := *xs
	unwrapped := make([]*string, len(src_2))
	for i_1, v_1 := range src_2 {
		if v_1.Tag == lisette.OptionSome {
			unwrapped[i_1] = &v_1.SomeVal
		} else {
			unwrapped[i_1] = nil
		}
	}
	ref_1 := &unwrapped
	aws.Use(ref_1)
}
