tests/spec/emit/snapshots/interop_result_alias_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let f = strconv.Atoi
    let g = f
    let r = g("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	f := strconv.Atoi
	g := f
	r, err := g("42")
	if err == nil {
		_ = r
	}
}
