tests/spec/emit/snapshots/interop_result_assignment.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn fallback(s: string) -> Result<int, error> { Ok(0) }
  
  fn main() {
    let mut f = fallback
    f = strconv.Atoi
    let r = f("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func fallback(_ string) (int, error) {
	return 0, nil
}

func main() {
	f := fallback
	f = strconv.Atoi
	r, err := f("42")
	if err == nil {
		_ = r
	}
}
