tests/spec/emit/snapshots/interop_result_break_value.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn make() -> fn(string) -> Result<int, error> {
    loop {
      break strconv.Atoi
    }
  }
  
  fn main() {
    let f = make()
    let r = f("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func make_() func(string) (int, error) {
	var tmp func(string) (int, error)
	for {
		tmp = strconv.Atoi
		break
	}
	return tmp
}

func main() {
	f := make_()
	r, err := f("1")
	if err == nil {
		_ = r
	}
}
