tests/spec/emit/snapshots/interop_result_call_arg.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn apply(f: fn(string) -> Result<int, error>, s: string) -> Result<int, error> {
    f(s)
  }
  
  fn main() {
    let r = apply(strconv.Atoi, "42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func apply(f func(string) (int, error), s string) (int, error) {
	return f(s)
}

func main() {
	r, err := apply(strconv.Atoi, "42")
	if err == nil {
		_ = r
	}
}
