tests/spec/emit/snapshots/interop_result_direct_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let r = strconv.Atoi("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	r, err := strconv.Atoi("42")
	if err == nil {
		_ = r
	}
}
