tests/spec/emit/snapshots/interop_result_error_ok_skips_nil_guard.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:example.com/legacy"
  
  fn main() {
    match legacy.Close() {
      Ok(stored) => { let _ = stored },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "example.com/legacy"

func main() {
	ret_1, err := legacy.Close()
	if err == nil {
		stored := ret_1
		_ = stored
	}
}
