tests/spec/emit/snapshots/interop_result_expression_position_assignment.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  type F = fn(string) -> Result<int, error>
  
  fn main() {
    let mut f: F = |s| Ok(0)
    let u = { f = strconv.Atoi }
    let _ = u
    let _ = f("1")
  }
---
package main

import "strconv"

type F func(string) (int, error)

func main() {
	var f F = func(_ string) (int, error) {
		return 0, nil
	}
	var u any
	f = strconv.Atoi
	u = struct{}{}
	_ = u
	f("1")
}
