tests/spec/emit/snapshots/interop_result_if_assignment.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let f: fn(string) -> Result<int, error> = if true {
      strconv.Atoi
    } else {
      strconv.Atoi
    }
    let r = f("1")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	var f func(string) (int, error)
	if true {
		f = strconv.Atoi
	} else {
		f = strconv.Atoi
	}
	r, err := f("1")
	if err == nil {
		_ = r
	}
}
