tests/spec/emit/snapshots/interop_result_let_call.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let f = strconv.Atoi
    let r = f("42")
    match r {
      Ok(v) => { let _ = v },
      Err(_) => { let _ = 0 },
    }
  }
---
package main

import "strconv"

func main() {
	f := strconv.Atoi
	r, err := f("42")
	if err == nil {
		_ = r
	}
}
