tests/spec/emit/snapshots/interop_result_let_mut.snap
---
source: tests/spec/emit/interop_matrix.rs
description: |
  
  import "go:strconv"
  
  fn main() {
    let mut f: fn(string) -> Result<int, error> = strconv.Atoi
    let r = f("42")
    let _ = r
    f = strconv.Atoi
    let r2 = f("99")
    let _ = r2
  }
---
package main

import (
	lisette "github.com/ivov/lisette/prelude"
	"strconv"
)

func main() {
	f := strconv.Atoi
	r := lisette.ResultFromPair[int](f("42"))
	_ = r
	f = strconv.Atoi
	r2 := lisette.ResultFromPair[int](f("99"))
	_ = r2
}
